# ship-classification

./: .gitignore  README.md  ReadMe.md  dataset.py  model.py  pyproject.toml  quantize.py  quants.txt  test_speed.sh  train.py
