[tool.poetry]
name = "ship-classification"
version = "0.1.0"
description = ""
authors = ["Shamily <khastiev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.1"
wandb = "^0.16.0"
pytorch-lightning = "^2.1.2"
torchvision = "^0.16.1"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
